Cloud Native/Kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: todo-app
  labels:
    app: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 30081
    protocol: TCP
    name: http
